# TrustedCode

./: BinarySearch.py  LICENSE  README.md  app.py  graph_builder.py  graph_nodes.py  pyproject.toml  utils.py
python_to_whyml_converter/: DNF.py  README.md  config.py  graph_nodes.py  main.py  state.py
python_to_whyml_converter/test code/06_gcd/: gcd.mlw
python_to_whyml_converter/test code/07_binary_search/: binary_search.py
python_to_whyml_converter/test code/08_array_copy/: array_copy.py  standard_lcopy.py
test code/01_division/: standard_divide.py
test code/02_absolute_value/: absolute_value.mlw  absolute_value.py
test code/03_sum_array/: sum_array.py
test code/05_array_minimum/: find_minimum.mlw  find_minimum.py  standard_find_minimum.py
test code/06_gcd/: gcd.py
test code/07_binary_search/: standard_binary_search.py
test code/08_array_copy/: lcopy.mlw
test code/08_factorial_recursive/: factorial.mlw
test code/10_array_minimum/: array_minimum.py  standard_array_minimum.py
test_code/01_division/: division.mlw  division.py
test_code/02_absolute_value/: standard_absolute_value.py
test_code/03_sum_array/: standard_sum_array.py  sum_array.mlw
test_code/04_factorial/: factorial.mlw  factorial.py  standard_factorial.py
test_code/07_binary_search/: binary_search.mlw
test_code/08_factorial_recursive/: factorial.py  standard_factorial.py
test_code/09_dutch_national_flag/: dutch_national_flag.mlw  dutch_national_flag.py  standard_dutch_national_flag.py
test_code/10_bubble_sort/: bubble_sort.mlw  bubble_sort.py  standard_bubble_sort.py
(+2 files in other folders)
