[project]
name = "test-proj"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "graphviz>=0.21",
    "langchain>=0.3.25",
    "langchain-anthropic>=0.3.15",
    "langchain-core>=0.3.65",
    "langchain-ollama>=0.3.3",
    "langgraph>=0.4.8",
    "langsmith>=0.3.45",
    "pandas>=2.3.0",
    "pygraphviz>=1.14",
    "python-dotenv>=1.1.0",
    "streamlit>=1.46.0",
]
